--- a/theme.css
+++ b/theme.css
@@ -36,6 +36,11 @@
 .button-container button.btnPlay.play-button { border-radius: 50%; }
 .button-container button.btnPlay.play-button .play-text, .button-container button.btnPlay.play-button .detailButton-content::after { display: none !important; content: none !important; }
 
+/* CARD */
+.cardContent:not(.defaultCardBackground) { border-radius: 0px; }
+.cardIndicators { right: 0; top: 0; }
+.countIndicator, .playedIndicator { border-radius: 0 0 0 5px; border: none; font-size: 12px; padding: 5px; background: #101010 !important; }
+
 /* ! HOME TAB END */
 
 
