--- a/theme.css
+++ b/theme.css
@@ -38,7 +38,7 @@
 
 /* CARD */
 .cardContent:not(.defaultCardBackground) { border-radius: 0px; }
-.cardIndicators { right: 0 !important; top: 0 !important; }
+.cardIndicators { right: 0 !important; top: 0 !important; contain: none !important; }
 .countIndicator, .playedIndicator { border-radius: 0 0 0 5px; border: none; font-size: 12px; padding: 5px; background: #101010 !important; }
 
 /* ! HOME TAB END */
